@@ -5,7 +5,7 @@ data(md_16.1)
 (mixed1_orig <- mixed(severity ~ sex + (1|id), md_16.1, check.contrasts=FALSE))
 summary(mixed1_orig$full.model)
 
-# p-values stay the same with afex default contrasts (contr.sum),
+# p-value stays the same with afex default contrasts (contr.sum),
 # but estimates and t-values for the fixed effects parameters change.
 (mixed1 <- mixed(severity ~ sex + (1|id), md_16.1))
 summary(mixed1$full.model)
@@ -17,7 +17,7 @@ str(md_16.4)
 
 ### replicate results from Table 16.6 (Maxwell & Delaney, 2004, p. 845)
 # Note that (1|room:cond) is needed because room is nested within cond.
-# p-values (almost) hold.
+# p-value (almost) holds.
 (mixed2 <- mixed(induct ~ cond + (1|room:cond), md_16.4))
 # (differences are dut to the use of Kenward-Roger approximation here,
 # whereas M&W's p-values are based on uncorrected df.)
@@ -29,7 +29,7 @@ summary(mixed2$full.model) # not identical
 md_16.4b <- within(md_16.4, cond <- C(cond, contr.treatment, base = 2))
 str(md_16.4b)
 
-# p-values stays identical:
+# p-value stays identical:
 (mixed2_orig <- mixed(induct ~ cond + (1|room:cond), md_16.4b, check.contrasts=FALSE))
 summary(mixed2_orig$full.model) # replicates parameters
 
@@ -87,32 +87,44 @@ m1 <- mixed(RT ~ Correct + Trial + PrevType * meanWeight +
     Frequency + NativeLanguage * Length + (1|Subject) + (1|Word), data = lexdec)
 
 m1
-##                   Effect     stat ndf     ddf F.scaling p.value
-## 1            (Intercept) 13572.72   1   96.62      1.00  <.0001
-## 2                Correct     8.15   1 1627.73      1.00    .004
-## 3                  Trial     7.57   1 1592.43      1.00    .006
-## 4               PrevType     0.17   1 1605.39      1.00     .68
-## 5             meanWeight    14.85   1   75.39      1.00   .0002
-## 6              Frequency    56.53   1   76.08      1.00  <.0001
-## 7         NativeLanguage     0.70   1   27.11      1.00     .41
-## 8                 Length     8.70   1   75.83      1.00    .004
-## 9    PrevType:meanWeight     6.18   1 1601.18      1.00     .01
-## 10 NativeLanguage:Length    14.24   1 1555.49      1.00   .0002
+##                  Effect  stat ndf     ddf F.scaling p.value
+## 1               Correct  8.15   1 1627.73      1.00    .004
+## 2                 Trial  7.57   1 1592.43      1.00    .006
+## 3              PrevType  0.17   1 1605.39      1.00     .68
+## 4            meanWeight 14.85   1   75.39      1.00   .0002
+## 5             Frequency 56.53   1   76.08      1.00  <.0001
+## 6        NativeLanguage  0.70   1   27.11      1.00     .41
+## 7                Length  8.70   1   75.83      1.00    .004
+## 8   PrevType:meanWeight  6.18   1 1601.18      1.00     .01
+## 9 NativeLanguage:Length 14.24   1 1555.49      1.00   .0002
 
 # Fitting a GLMM using parametric bootstrap:
 require("mlmRev") # for the data, see ?Contraception
 
-gm1 <- mixed(use ~ age + I(age^2) + urban + livch + (1 | district), 
- family = binomial, data = Contraception, args.test = list(nsim = 10), method = "PB")
- 
-## using multicore
+gm1 <- mixed(use ~ age + I(age^2) + urban + livch + (1 | district), method = "PB",
+ family = binomial, data = Contraception, args.test = list(nsim = 10))
+
+#######################
+### using multicore ###
+#######################
+
 require(parallel)
 (nc <- detectCores()) # number of cores
 cl <- makeCluster(rep("localhost", nc)) # make cluster
-# to keep track of what the function is doind, redirect output to outfile:
+# to keep track of what the function is doindg redirect output to outfile:
 # cl <- makeCluster(rep("localhost", nc), outfile = "cl.log.txt")
 
-# obtain fits with multicore:
+## There are two ways to use multicore:
+
+# 1. Obtain fits with multicore:
 mixed(value ~ treatment*phase*hour +(1|id), data = obk.long, method = "LRT", cl = cl)
+
+# 2. Obtain PB samples via multicore: 
+mixed(use ~ age + I(age^2) + urban + livch + (1 | district), family = binomial,
+ method = "PB", data = Contraception, args.test = list(nsim = 10, cl = cl))
+
+## Both ways can be combined:
+mixed(use ~ age + I(age^2) + urban + livch + (1 | district), family = binomial, 
+ method = "PB", data = Contraception, args.test = list(nsim = 10, cl = cl), cl = cl)
 
 }
